--- a/task61.css
+++ b/task61.css
@@ -41,7 +41,7 @@ padding: 1em;
 .a{display: flex;
 	flex-direction:column;
 }
-.a div{margin: 0.3em 5%;
+.a div{margin: 0.5em 5% 0.2em 5% ;
 color: gray;}
 .p1{margin: 0.3em 5%;
 color: black;
