--- a/task61.css
+++ b/task61.css
@@ -1,134 +1,82 @@
-<!doctype html>
-<html>
-<head>
-<link rel="stylesheet" href="./task61.css" type="text/css">
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1.0, user-scalable=no">
+@charset "utf-8";
+/* CSS Document */
 
-<title>无标题文档</title>
-<script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
-<link
-    href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css"
-    rel="stylesheet">
-<script
-    src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js">
-</script>
-</head>
-<body class="body">
-<header class="header">
-<div >
-  <button type="button" class="button1">找雇主</button>
-  <button type="button" class="button2">找护工</button>
-</div>
-</header> 
-<div class="xiala">
-        <select>
-            <option value="">所在地</option>
-            <option value="">北京</option>
-            <option value="">珠海</option>
-        </select>
-        <select>
-            <option value="">食宿</option>
-            <option value="">包吃住</option>
-            <option value="">不包吃住</option>
-        </select>
-        <select>
-            <option value="">病人情况</option>
-            <option value="">良好</option>
-            <option value="">恶化</option>
-        </select>
-    </div>
-<main  >
-  <div class="a" >
-	<div><img src="img/task5-2_0000s_0001_calendar2-拷贝-5.png" width="18" height="18" alt=""/>
-		服务日期
-	</div>
-	<div>
-	<p class="p1">2015-7-5 至 2015-7-12</p>
-	<p class="p2">25元/小时</p>
-	</div>
-	<div><img src="img/task5-2_0028_Shape-4-拷贝-4.png" width="16.15" height="19.55" alt=""/>
-		北京&middot;通州&middot;果园
-	</div>
-	<span></span>
-  </div>
-<div class="a" >
-	<div><img src="img/task5-2_0000s_0001_calendar2-拷贝-5.png" width="18" height="18" alt=""/>
-		服务日期
-	</div>
-	<div>
-	<p class="p1">2015-7-5 至 2015-7-12</p>
-	<p class="p2">35元/小时</p>
-	</div>
-	<div><img src="img/task5-2_0028_Shape-4-拷贝-4.png" width="16.15" height="19.55" alt=""/>
-		北京&middot;通州&middot;果园
-	</div>
-	<span></span>
-  </div>
-<div class="a" >
-	<div><img src="img/task5-2_0000s_0001_calendar2-拷贝-5.png" width="18" height="18" alt=""/>
-		服务日期
-	</div>
-	<div>
-	<p class="p1">2015-7-5 至 2015-7-12</p>
-	<p class="p2">45元/小时</p>
-	</div>
-	<div><img src="img/task5-2_0028_Shape-4-拷贝-4.png" width="16.15" height="19.55" alt=""/>
-		北京&middot;通州&middot;果园
-	</div>
-	<span></span>
-  </div>
-<div class="a" >
-	<div><img src="img/task5-2_0000s_0001_calendar2-拷贝-5.png" width="18" height="18" alt=""/>
-		服务日期
-	</div>
-	<div>
-	<p class="p1">2015-7-5 至 2015-7-12</p>
-	<p class="p2">45元/小时</p>
-	</div>
-	<div><img src="img/task5-2_0028_Shape-4-拷贝-4.png" width="16.15" height="19.55" alt=""/>
-		北京&middot;通州&middot;果园
-	</div>
-	<span></span>
-  </div>
-<div class="a" >
-	<div><img src="img/task5-2_0000s_0001_calendar2-拷贝-5.png" width="18" height="18" alt=""/>
-		服务日期
-	</div>
-	<div class="p">
-	<p class="p1">2015-7-5 至 2015-7-12</p>
-	<p class="p2">45元/小时</p>
-	</div>
-	<div><img src="img/task5-2_0028_Shape-4-拷贝-4.png" width="16.15" height="19.55" alt=""/>
-		北京&middot;通州&middot;果园
-	</div>
-	<span></span>
-  </div>
-<div class="a" >
-	<div><img src="img/task5-2_0000s_0001_calendar2-拷贝-5.png" width="18" height="18" alt=""/>
-		服务日期
-	</div>
-	<div>
-	<p class="p1">2015-7-5 至 2015-7-12</p>
-	<p class="p2">45元/小时</p>
-	</div>
-	<div><img src="img/task5-2_0028_Shape-4-拷贝-4.png" width="16.15" height="19.55" alt=""/>
-		北京&middot;通州&middot;果园
-	</div>
-	<span></span>
-  </div>
-<div class="div3"></div>	
-</main>
+html,body{padding:0; margin:0;}
+main{position: relative;top:8em}
+.body{font-family: 黑体;
+}
+.header{background: #5fc0cd;
+	position: fixed;
+	display: flex;
+	width: 100%;
+	height: 4em;
+	color: #FFFFFF;
+	z-index: 1;
+	align-items: center;
+	justify-content: center;	
+	  }	
 
-<div class="footer">
-<img src="img/task5-2_0002s_0000_形状-4.png" width="30" height="25.5" alt=""/>
-<img src="img/task6-_000.png" width="53" height="53" alt=""/>
-<img src="img/task5-2_0002s_0004_买卖牛人.png" width="24" height="25.5" alt=""/>
+.header button {border-radius: 5px;
+	border: 0px;
+margin: -0.5em;
+	height: 3em;
+	width: 40vw;
+	}
+.button1 {color: white;
+background: #55a8b3}
+.button2 {color: #5fc0cd;
+background:white;}
+.xiala{position: fixed;
+	margin-top:  4em ;
+	width: 100%;
+	display: flex;
+text-align: center;
+	justify-content: center;
+background: white;}
+.xiala select{width: 33.33%;
+padding: 1em;
+	color: grey;
+	
+}
 
-
-</div>
-
-
-
-</body>
-</html>
+.a{display: flex;
+flex-direction:column;
+}
+.a div{margin: 0.5em 5% 0.2em 5% ;
+color: gray;
+white-space:nowrap}
+.p1{margin: 0.3em 5%;
+color: black;
+font-weight: bold;
+float: left;
+	width: 40%;;
+overflow:hidden;
+text-overflow:ellipsis;
+white-space:nowrap	;}
+.p2{margin: 0.3em 5%;
+color: red;
+font-weight: bold;
+float: right;	;
+}
+.a span{
+	background:#c4c4c4;
+	height: 1.5px;
+	width: 100%; }	
+.div3{
+	position: absolute;
+	top:100%;
+	height: 4em;
+	width: 100%
+	}	
+.footer{
+	background:white;
+	position: fixed;
+	bottom:0;
+	width: 100%;
+	buttom:0;
+	height: 4em;
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+	z-index: 1;
+	  }
