--- a/task7/task7结果.css
+++ b/task7/task7结果.css
@@ -106,3 +106,10 @@ border-radius: 5px;}
 color: white;
 font-size: 150%;
 border-radius: 5px;}
+.div3{
+	position: absolute;
+	top:169%;
+	height: 60px;
+	width: 100%;
+
+	}
