--- a/task7/task7投票.css
+++ b/task7/task7投票.css
@@ -29,6 +29,7 @@ body{font-family: 黑体;
 }
 .a>div{
 	margin-left: 10vw;
+	font-size: 130%
 }
 button{
 	border: none;
@@ -39,64 +40,52 @@ button{
 	top:60px;
 	left:30px
 }
-main{
+.main{
 	width: 100%;
 	background:#5fc0cd; 
 	position: absolute;
 	top:120px;
 	display: flex;
-	justify-content: center;
-	flex-wrap:wrap;
-	padding: 10% 0 0 0;
-	
-}
-
-main button{
-	text-align: center;
-	display: flex;
 	flex-direction: column;
-	align-items: center;
+	align-items: center
 	
-   }
-.box:hover .button-img{
-    display:block ;
 }
-.father{margin: 4% 2%;
-padding: 0;
-width: 25vw;
-	display: flex;
-	flex-direction: column
+.main>div{
+	margin: 40px 0 10px 0 ;
+	
+}
+.main button:hover .button-img{
+    display:block ;
 }
 .button-img {
-	width: 25vw;
-	display:none;	
-	text-align: center;
+	width: 80px;
+	display:none;
 	
+
  }
-.father:hover .button-img{
-    display:block ;
+.button-img img{
+	margin: 0 -2.5px
 }
-.box{width: 25vw;
-	height: 25vw;
+.box{width: 80px;
+	height: 80px;
 	background:#f5c97b; 
 	border: 2px solid white;
-	font-size: 7vw;
+	font-size: 14px;
 	display: flex;
 	flex-direction: column-reverse;
-	justify-content: flex-start;
-	text-align: center;
+
 }
-.box1{padding-top: 5vw;
-	height: 15vw;
+.box1{padding-top: 10px;
+	height: 50px;
 color: white;}
 .box2{background: #83b09a;
 	margin-bottom: 0;
-	padding-top: 1vw;
-	height: 10vw;
+	padding-top: 2px;
+	height: 50px;
 color: white;}
 .p1{position: absolute;
 	left:9%;
-	top:3%;
+	top:2%;
 	color: white;
 }
 .div3{
